[EME][ClearKey] Fixed warning in CDM compilation https://bugs.webkit.org/show_bug.cgi?id=175979

Reviewed by Žan Doberšek.

* platform/encryptedmedia/clearkey/CDMClearKey.h: Added a final to
avoid the compiler warning about the missing override keyword.


Canonical link: https://commits.webkit.org/192632@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@221184 268f45cc-cd09-0410-ab3c-d52691b4dbfc